[#240] fix: 반응 유형 전체인 경우도 반환되도록 수정